--- a/templates/edit_dir.tmpl
+++ b/templates/edit_dir.tmpl
@@ -1,4 +1,4 @@
-{{ template "base_top.tmpl" }}
+{{ template "base_top" . }}
 <body>
     <form method="post" action="/?action=CREATE">
         Directory Name
