--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -2,5 +2,12 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{{ url_for "/css/bootstrap.css" }}">
+        <link rel="stylesheet" href="{{ url_for "/css/bootstrap-grid.css" }}">
+
         <title>Go Wiki</title>
     </head> 
+    <body>
