--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -5,9 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="{{ url_for "/css/bootstrap.css" }}">
-        <link rel="stylesheet" href="{{ url_for "/css/bootstrap-grid.css" }}">
+        <link rel="stylesheet" href="{{ url_for "/css/bootstrap.min.css" }}">
+        <link rel="stylesheet" href="{{ url_for "/css/bootstrap-grid.min.css" }}">
+        <link rel="stylesheet" href="{{ url_for "/css/main.css" }}">
 
         <title>Go Wiki</title>
     </head> 
+
     <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="height: 3rem;">
+      <a class="navbar-brand" href="#">Title</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Edit</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Diff</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0"> 
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
