--- a/templates/base_bottom.tmpl
+++ b/templates/base_bottom.tmpl
@@ -1,3 +1,9 @@
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
+    </footer>
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="{{ url_for "/js/jquery.min.js" }}"></script>
     <script src="{{ url_for "/js/tether.min.js" }}"></script>
