--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -10,5 +10,4 @@
     <form method="post" action="/?action=EDIT">
         <input type="submit" value="編集">
     </form>
-</body>
-</html>
+{{ template "base_bottom" . }}
