--- a/templates/repo_dir.tmpl
+++ b/templates/repo_dir.tmpl
@@ -12,5 +12,5 @@
     <form method="post" action="/">
         <input type="submit" value="アップロード">
     </form>
-</body>
-</html>
+
+{{ template "base_bottom" . }}
