--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,25 @@
-$navbar-bg: #26f3fd;
-$navbar-height: 40px;
-
-nav {
-  min-height: 40px;
-  background-color: #000000;
-  height: $navbar-height;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
   padding-top: 5rem;
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 30px;
+  line-height: 30px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
 }
