--- a/templates/edit_dir.tmpl
+++ b/templates/edit_dir.tmpl
@@ -5,5 +5,4 @@
         <input type="text" name="dir" size="20">
         <input type="submit" value="作成">
     </form>
-</body>
-</html>
+{{ template "base_bottom" . }}
