--- a/templates/base_bottom.tmpl
+++ b/templates/base_bottom.tmpl
@@ -1,6 +1,8 @@
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">
+            <a href="#">Upload Here</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Place sticky footer content here.
+        </span>
       </div>
     </footer>
 
