repo/file: edit 表示画面, 編集画面

--- a/templates/base_bottom.tmpl
+++ b/templates/base_bottom.tmpl
@@ -1,3 +1,4 @@
+    <!-- start footer -->
     <footer class="footer">
       <div class="container">
         <span class="text-muted">
@@ -5,6 +6,7 @@
         </span>
       </div>
     </footer>
+    <!-- end footer -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="{{ url_for "/js/jquery.min.js" }}"></script>
