--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -14,6 +14,7 @@
 
     <body>
 
+    <!-- start header -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="height: 3rem;">
       <a class="navbar-brand" href="#">Title</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +24,7 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Edit</a>
+              <a class="nav-link" href="{{ url_for .Epath }}">Edit</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Diff</a>
@@ -35,3 +36,7 @@
         </form>
       </div>
     </nav>
+    <!-- end header -->
+
+    <!-- start left sidebar -->
+    <!-- start left sidebar -->
