--- a/templates/edit_file.tmpl
+++ b/templates/edit_file.tmpl
@@ -1,9 +1,9 @@
 {{ template "base_top" . }}
     <div class="container">
-        <h1>ファイル</h1>
-        <form method="post" action="/save" enctype="multipart/form-data">
+        <h1>Edit</h1>
+        <form method="post" action={{ url_for .Spath }} enctype="multipart/form-data">
             <fieldset>
-                <textarea name="content" rows="20" cols="100">{{ . }}</textarea>
+                <textarea name="content" rows="20" cols="100">{{ .Content }}</textarea>
                 <input type="submit" name="submit" value="更新">
             </fieldset>
         </form>
