--- a/templates/edit_file.tmpl
+++ b/templates/edit_file.tmpl
@@ -4,7 +4,8 @@
         <form method="post" action={{ url_for .Spath }} enctype="multipart/form-data">
             <fieldset>
                 <textarea name="content" rows="20" cols="100">{{ .Content }}</textarea>
-                <input type="submit" name="submit" value="更新">
+                <input type="submit" name="submit" value="Save">
+                <input type="submit" name="submit" value="Back">
             </fieldset>
         </form>
     </div>
