--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,7 @@ html {
 body {
   padding-top: 5rem;
   margin-bottom: 60px;
+/*  background-color: #333; */
 }
 
 .footer {
@@ -22,4 +23,20 @@ body {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
+}
+
+.landing {
+	height: 100vh;
+}
+
+/*
+.main-content {
+	background-color: rgba(255, 255, 255, 0.8);
+}
+*/
+
+.sidebar {
+/*	background-color: #fff; */
+	list-style: none;
+	height: 100vh;
 }
