--- a/templates/repo_file.tmpl
+++ b/templates/repo_file.tmpl
@@ -1,3 +1,16 @@
 {{ template "base_top" . }}
-    {{ safehtml .Content }}
+	<div class="container-fluid">
+		<div class="row landing">
+			<div class="col-xs sidebar">
+                <nav>
+                    {{ safehtml .Dirtree }}
+                </nav>
+			</div>
+			<div class="col-xs-9">
+				<div class="container main-content">
+                   {{ safehtml .Content}}
+				</div>
+			</div>
+		</div>
+	</div>
 {{ template "base_bottom" . }}
