--- a/static/css/sticker-footer.css
+++ b/static/css/sticker-footer.css
@@ -1,13 +1,13 @@
+/* Sticky footer styles
+-------------------------------------------------- */
 html {
   position: relative;
   min-height: 100%;
 }
-
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+/*  margin-bottom: 60px;*/
 }
-
 .footer {
   position: absolute;
   bottom: 0;
@@ -18,14 +18,13 @@ body {
   background-color: #f5f5f5;
 }
 
+
 /* Custom page CSS
 -------------------------------------------------- */
+/* Not required for template or sticky footer method. */
 
-/* Not required for template or sticky footer method. 
 .container {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
 }
-*/
-
