--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -9,19 +9,18 @@
         <link rel="stylesheet" href="{{ url_for "/css/bootstrap-grid.min.css" }}">
         <link rel="stylesheet" href="{{ url_for "/css/main.css" }}">
 
-        <title>Go Wiki</title>
+        <title>GoWiki</title>
     </head> 
 
     <body>
 
-    <!-- start header -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="height: 3rem;">
-      <a class="navbar-brand" href="#">Title</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- start navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <a class="navbar-brand" href="#">GoWiki</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
               <a class="nav-link" href="{{ url_for .Epath }}">Edit</a>
@@ -30,13 +29,14 @@
             <a class="nav-link" href="#">Diff</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0"> 
+        <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
-    <!-- end header -->
+    <!-- end navbar -->
+
 
     <!-- start left sidebar -->
     <!-- start left sidebar -->
