--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -1,24 +1,12 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
+/*
+ * Base structure
+ */
 
+/* Move down content because we have a fixed navbar that is 3.5rem tall 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
   padding-top: 3.5rem;
 }
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
-
+*/
 /*
  * Sidebar
  */
@@ -56,15 +44,3 @@ body {
 .sidebar .nav-link {
   border-radius: 0;
 }
-
-/* Custom page CSS
--------------------------------------------------- */
-
-/* Not required for template or sticky footer method. 
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
-}
-*/
-
