--- a/templates/base_bottom.tmpl
+++ b/templates/base_bottom.tmpl
@@ -1,5 +1,5 @@
     <!-- start footer -->
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
       <div class="container">
         <span class="text-muted">
             <a href="#">Upload Here</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Place sticky footer content here.
