--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -15,7 +15,7 @@
     <body>
 
     <!-- start navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top mb-4">
       <a class="navbar-brand" href="#">GoWiki</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
