rename repo_file.tmpl > repo.tmpl

--- a/templates/repo.tmpl
+++ b/templates/repo.tmpl
@@ -8,6 +8,7 @@
 
     <!-- Begin page content -->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+        repo / file 
           {{ safehtml .Content}}
         </main>
 
