--- a/templates/edit_file.tmpl
+++ b/templates/edit_file.tmpl
@@ -3,9 +3,10 @@
         <h1>Edit</h1>
         <form method="post" action={{ url_for .Spath }} enctype="multipart/form-data">
             <fieldset>
-                <textarea name="content" rows="20" cols="100">{{ .Content }}</textarea>
-                <input type="submit" name="submit" value="Save">
-                <input type="submit" name="submit" value="Back">
+                <h2>Edit {{ .FileName }}</h2>
+                <textarea name="content" rows="20" cols="100">{{ .Content }}</textarea> <br>
+                <input type="submit" name="submit" value="Save" />
+                <input type="submit" name="submit" value="Back" />
             </fieldset>
         </form>
     </div>
