path, filepath に書き直し

--- a/templates/repo.tmpl
+++ b/templates/repo.tmpl
@@ -8,7 +8,9 @@
 
     <!-- Begin page content -->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-        repo / file 
+          <div>
+              {{ safehtml .LinkPath }}
+          </div>
           {{ safehtml .Content}}
         </main>
 
