--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -22,9 +22,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
+          {{ if .IsHeaderOption }}
           <li class="nav-item">
               <a class="nav-link" href="{{ url_for .Epath }}">Edit</a>
           </li>
+          {{ end }}
           <li class="nav-item">
             <a class="nav-link" href="#">Diff</a>
           </li>
