--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -16,7 +16,7 @@
 
     <!-- start navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top mb-4">
-      <a class="navbar-brand" href="#">GoWiki</a>
+      <a class="navbar-brand" href="/repo">GoWiki</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
           </li>
           {{ end }}
           <li class="nav-item">
-            <a class="nav-link" href="#">Diff</a>
+            <a class="nav-link" href="/diff{{ difflink .Path }}">Diff</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
