--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -24,7 +24,8 @@
         <ul class="navbar-nav mr-auto">
           {{ if .IsHeaderOption }}
           <li class="nav-item">
-              <a class="nav-link" href="{{ url_for .Epath }}">Edit</a>
+              {{ $editpath := getactpath .Path "E" }}
+              <a class="nav-link" href="{{ url_for $editpath }}">Edit</a>
           </li>
           {{ end }}
           <li class="nav-item">
