--- a/templates/upload.tmpl
+++ b/templates/upload.tmpl
@@ -1,7 +1,7 @@
 {{ template "base_top" . }}
     <div class="container">
         <h1>ファイルアップロードテスト</h1>
-        <form method="post" action="/save" enctype="multipart/form-data">
+        <form method="post" action="/upload{{ difflink .Path }}" enctype="multipart/form-data">
             <fieldset>
                 <input type="file" name="upload_files" id="upload_files" multiple="multiple">
                 <input type="submit" name="submit" value="アップロード">
