add /upload, /delete

--- a/templates/base_top.tmpl
+++ b/templates/base_top.tmpl
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="{{ url_for "/css/bootstrap.min.css" }}">
         <link rel="stylesheet" href="{{ url_for "/css/bootstrap-grid.min.css" }}">
         <link rel="stylesheet" href="{{ url_for "/css/main.css" }}">
+        <!-- only /upload -->
+        <script src="{{ url_for "/js/dropzone.min.js" }}"></script>
+        <link rel="stylesheet" href="{{ url_for "/css/dropzone.min.css" }}" media="all">
+        <link rel="stylesheet" href="{{ url_for "/js/dropzone.min.js" }}" media="all">
 
         <title>GoWiki</title>
     </head> 
