--- a/templates/base_bottom.tmpl
+++ b/templates/base_bottom.tmpl
@@ -12,8 +12,7 @@
     </footer>
     <!-- end footer -->
 
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="{{ url_for "/js/jquery.min.js" }}"></script>
+    <!-- Tether, Bootstrap JS. -->
     <script src="{{ url_for "/js/tether.min.js" }}"></script>
     <script src="{{ url_for "/js/bootstrap.min.js" }}"></script>
     </body>
