--- a/templates/repo.tmpl
+++ b/templates/repo.tmpl
@@ -1,12 +1,12 @@
 {{ template "base_top" . }}
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+        <nav class="col-md-3 pt-3">
             {{ safehtml .Tree }}
         </nav>
 
         <!-- Begin page content -->
-        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+        <main class="col-md-9 pt-3" role="main">
             <div>
                 {{ safehtml .LinkPath }}
             </div>
